2008-04-27 Quentin Mathe <qmathe@club-internet.fr>

	Added a partially implemented object server that plays the roles of a 
	convenient core object factory and a shared cache of all core objects in 
	memory for all related core object contexts.
	* Headers/COObjectServer.h:
	* COObjectServer.m:
	Added.
	* GNUmakefile: Updated.

2008-04-27 Quentin Mathe <qmathe@club-internet.fr>

	Added a rudimentary metadata server only taking care of mapping UUIDs to 
	URLs with a simple dictionary for now.
	* Headers/COMetadataServer.h:
	* COMetadataServer.m:
	* TestMetadataServer.m:
	Added.
	* GNUmakefile: Updated.

2008-04-22 Quentin Mathe <qmathe@club-internet.fr>

	Written some basic serialization tests and ensured COObjectContext doesn't 
	break the existing code. All tests pass but one (NSNumber issue, may be 
	GNUstep-related).
	* COObjectContext.m:
	(+defaultContext): Fixed the incorrect release of the default context that 
	lead to a crash.
	(-recordInvocation:): Tweaked to always push objects on the recorded objects 
	stack and documented. This fix a crash occuring in -endRecord trying to 
	remove an object which isn't present.
	(-snapshotTimeInterval): Corrected to return the ivar value.
	* Headers/NSObject+CoreObject.h: Declared -version in COManagedObject 
	protocol.
	* Headers/COObject.h:
	* COObject.m:
	(-version:): New method with associated property kCOVersionProperty (fix a
	missing selector exception in COObjectContext).
	(+initialize, -init): Updated to declare kCOVersionProperty.
	* TestObject.m: Updated to test kCOVersionProperty.
	* TestSerializer.m: More tests.
	* GNUmakefile: Turned on all tests by default.

2008-04-19  Quentin Mathe <qmathe@club-internet.fr>

	Introduced COOObjectContext to manage pools of managed core objects 
	(COObject and COProxy). First step towards the modularization of COProxy to 
	share all its code with the adaptative model (COObject and related 
	subclasses).
	WARNING: Work in progress code, mostly untested but compiles fine.